2009-05-31  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: use RUBYARCHDIR.
	Patch by OBATA Akio. Thanks!!!

2009-03-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangoattribute.c, test/test-attribute.rb: add
	Pango::Attribute#start_index= and Pango::Attribute#end_index=.
	Suggested by Geoff Youngs. Thanks!!!

	* src/rbpangolanguage.c, test/test-language.rb: bind
	Pango::Language.default.

	* test/run-test.rb: set $VERBOSE.

2009-02-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/pango.rb: fix indent.

2008-11-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/: use RARRAY_PTR() and RARRAY_LEN().

2008-09-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangofontdescription.c (font_desc_initialize): fix memory leak.

	* src/rbpangolayout.c (layout_copy): fix memory leak.

	* src/rbpangocairo.c (create_layout, font_map_create_context):
	fix memory leak.
	Reported by James Healy. Thanks!!!

2008-09-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: use check_cairo.

2008-08-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangofontdescription.c (font_desc_set_weight): add missing
	type declaration for 'wight' argument. [#2059917]
	Reported by Blondel Mathieu. Thanks!!!

2008-08-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangolayout.c: Pango::Layout#font_description= accepts
	font description string too.

	* test/: add.

2008-06-11  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: include pango/pango.h in have_func test.

2008-06-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpangolayoutiter.c: use '#ifndef' not '#if !' for -DXXX variable.

2008-04-13  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: fix rcairo's source path.

2008-03-04  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb, src/rbpango.h, src/rbpangoglyphitem.c:
	pango_glyph_item_get_type() was defined in upstream.

2008-01-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: don't use ftools.
	Reported by Carlo E. Prelz. Thanks!!!

2007-12-28  Kouhei Sutou  <kou@cozmixng.org>
